# Formacion-en-Rust

./: .gitignore  Cargo.toml  README.md
semana01/: RUST-07_Instalación_de_Toolchain_de_Rust_Link_de_repositorio.txt
