[package]
name = "codigoRust"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "queue"
path = "src/bin/semana02/DS-02_Queue(Cola)_v0.2.0/main.rs"

[[bin]]
name = "bst"
path = "src/bin/semana02/DS-04_Binary_Search_Tree_v0.2.0/main.rs"

[[bin]]
name = "mergesort"
path = "src/bin/semana02/ALG-02_Merge_Sort_v0.2.0/main.rs"
